# LAB22

./: README.md
JNIDemo/app/: build.gradle.kts
JNIDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNIDemo/app/src/main/java/com/example/jnidemo/: MainActivity.java
JNIDemo/app/src/main/res/layout/: activity_main.xml
JNIDemo/app/src/main/res/values/: strings.xml
JNIDemo/gradle/wrapper/: gradle-wrapper.properties
